--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,10 @@
   "search.exclude": {
     "**/packages/react-icons/src/icons/*/**": true,
   },
+  // "editor.codeActionsOnSave": {
+  //   "source.fixAll": true
+  // },
+  // "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "files.insertFinalNewline": true
 }
