--- a/package.json
+++ b/package.json
@@ -6,17 +6,10 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "eslint": "^8.25.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.0",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-react": "latest",
     "lerna": "^3.22.1",
     "prettier": "^2.7.1"
   },
