upgrade prettier configs

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
     "eslint-plugin-react": "latest",
     "lerna": "^3.22.1",
@@ -17,6 +17,8 @@
     "submodule": "git submodule update --init",
     "submodule-deinit": "git submodule deinit --all",
     "lint": "yarn eslint .",
+    "format": "prettier --write --ignore-unknown .",
+    "format:ci": "prettier --check --ignore-unknown .",
     "version-up": "lerna version",
     "version-snapshot": "lerna version --no-push --no-git-tag-version --yes --preid snapshot prepatch --force-publish",
     "version": "yarn install && git add .",
