--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,14 +8,13 @@ extends:
   - plugin:react/recommended
   - plugin:@typescript-eslint/recommended
 overrides: []
-parser: '@typescript-eslint/parser'
+parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 plugins:
   - react
-  - '@typescript-eslint'
+  - "@typescript-eslint"
 rules:
-  '@typescript-eslint/no-var-requires': 0  # todo remove
-  'react/prop-types': 0
-  
+  "@typescript-eslint/no-var-requires": 0 # todo remove
+  "react/prop-types": 0
