--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "build": "node scripts/build.js"
+    "ts": "node -r esbuild-register",
+    "build": " yarn ts ./scripts/build.ts"
   }
 }
