--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": ["packages/*"],
-  "version": "4.6.0",
+  "version": "4.6.1-snapshot.0",
   "command": {
     "version": {
       "push": true
