--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -9,6 +9,13 @@
   ],
   "license": "MIT",
   "main": "lib",
+  "module": "./lib/esm/index.js",
+  "exports": {
+    ".": {
+      "require": "./lib/cjs/index.js",
+      "default": "./lib/esm/index.js"
+    }
+  },
   "types": "./lib/esm/index.d.ts",
   "sideEffects": false,
   "repository": {
