--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -44,6 +44,7 @@
   },
   "scripts": {
     "ts": "node -r esbuild-register",
-    "build": " yarn ts ./scripts/build.ts"
+    "build": "yarn ts ./scripts/build.ts",
+    "fetch": "yarn ts ./scripts/fetcher.ts"
   }
 }
