--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -38,6 +38,7 @@
     "ionicons-5": "npm:ionicons@5",
     "lerna": "^3.20.2",
     "octicons": "^8.1.0",
+    "p-queue": "^7.3.0",
     "prettier": "^2.7.1",
     "svgo": "^1.3.2",
     "typescript": "^4.8.4"
