add git version check scripts

--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -46,6 +46,7 @@
   "scripts": {
     "ts": "node -r esbuild-register",
     "build": "yarn ts ./scripts/build.ts",
-    "fetch": "yarn ts ./scripts/fetcher.ts"
+    "fetch": "yarn ts ./scripts/fetcher.ts",
+    "check": "yarn ts ./scripts/check.ts"
   }
 }
