fix node.js DEP0128
- the main field pointing to an invalid filename has been deprecated.
- specify the full path instead.
- reference https://nodejs.org/api/deprecations.html#DEP0128

--- a/packages/_react-icons_all-files/package.json
+++ b/packages/_react-icons_all-files/package.json
@@ -7,7 +7,8 @@
     "kamijin_fanta <kamijin@live.jp>"
   ],
   "license": "MIT",
-  "main": "lib",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "sideEffects": false,
   "repository": {
