--- a/packages/_react-icons_all/package.json
+++ b/packages/_react-icons_all/package.json
@@ -7,7 +7,8 @@
     "kamijin_fanta <kamijin@live.jp>"
   ],
   "license": "MIT",
-  "main": "lib",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "sideEffects": false,
   "repository": {
