Add Lucide icons

--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -38,6 +38,7 @@
     "ionicons": "^4.6.3",
     "ionicons-5": "npm:ionicons@5",
     "lerna": "^3.20.2",
+    "lucide-static": "^0.192.0",
     "octicons": "^8.5.0",
     "p-queue": "^7.3.0",
     "prettier": "^2.7.1",
