--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
+    "@primer/octicons": "^18.3.0",
     "@types/react": "^18.0.21",
     "camelcase": "^7.0.0",
     "cheerio": "^1.0.0-rc.12",
@@ -39,7 +40,6 @@
     "ionicons-5": "npm:ionicons@5",
     "lerna": "^3.20.2",
     "lucide-static": "^0.192.0",
-    "octicons": "^8.5.0",
     "p-queue": "^7.3.0",
     "prettier": "^2.7.1",
     "svgo": "^1.3.2",
