--- a/packages/_react-icons_all-files/package.json
+++ b/packages/_react-icons_all-files/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-icons/all-files",
+  "name": "@accessitech/react-icons_all-files",
   "version": "4.8.1-snapshot.2",
   "description": "SVG React icons of popular icon packs using ES6 imports",
   "author": "Goran Gajic",
