--- a/packages/_react-icons_all/package.json
+++ b/packages/_react-icons_all/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-icons",
+  "name": "@accessitech/react-icons",
   "version": "4.8.1-snapshot.2",
   "description": "SVG React icons of popular icon packs using ES6 imports",
   "author": "Goran Gajic",
   "contributors": [
+    "AccessiTech LLC <accessit3ch@gmail.com>",
     "kamijin_fanta <kamijin@live.jp>"
   ],
   "license": "MIT",
