--- a/packages/demo-all-files/package.json
+++ b/packages/demo-all-files/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.1-snapshot.2",
+    "react-icons": "file:../react-icons",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
