--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -26,7 +26,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.1-snapshot.2",
+    "react-icons": "file:../react-icons",
     "sass": "^1.55.0",
     "tiny-skeleton-loader-react": "^1.1.0"
   },
