--- a/packages/_react-icons_all-files/package.json
+++ b/packages/_react-icons_all-files/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@accessitech/react-icons_all-files",
-  "version": "4.8.1-snapshot.2",
+  "version": "0.1.0",
   "description": "SVG React icons of popular icon packs using ES6 imports",
   "author": "Goran Gajic",
   "contributors": [
+    "AccessiTech LLC <accessit3ch@gmail.com>",
     "kamijin_fanta <kamijin@live.jp>"
   ],
   "license": "MIT",
