--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "version": "4.8.1-snapshot.2",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.15.2",
