chore: remove deno from vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,5 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "files.insertFinalNewline": true,
-  "deno.enable": false
+  "files.insertFinalNewline": true
 }
