Add support for building directory with svgs inside of it

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -2,3 +2,5 @@ _react-icons_all/*
 !_react-icons_all/package.json
 _react-icons_all-files/*
 !_react-icons_all-files/package.json
+_react-icons_all-svgs/*
+!_react-icons_all-svgs/package.json
