--- a/.github/workflows/buildsvgs.yml
+++ b/.github/workflows/buildsvgs.yml
@@ -23,7 +23,9 @@ jobs:
         run: cd packages/react-icons && yarn fetch
       - name: Build icons
         run: cd packages/react-icons && yarn build-svgs
+      - name: create icon tarball
+        run: tar cvzf react-icons-svgs.tar.gz -C packages/_react-icons_all-svgs .
       - uses: actions/upload-artifact@v3
         with:
           name: react-icons-svgs
-          path: packages/_react-icons_all-svgs/
+          path: react-icons-svgs.tar.gz
