--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,11 +1,11 @@
 {
   "name": "demo",
-  "version": "4.10.2-snapshot.0",
+  "version": "4.11.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.2-snapshot.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
