astro: style & icons

--- a/packages/preview-astro/package.json
+++ b/packages/preview-astro/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "astro": "^3.4.3",
+    "basscss": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.1-snapshot.0",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2"
   }
 }
