astro: index page

--- a/packages/preview-astro/package.json
+++ b/packages/preview-astro/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/react": "^3.0.4",
     "astro": "^3.4.3",
     "basscss": "^8.1.0",
     "react": "^18.2.0",
