astro: show icons samples in top page

--- a/packages/preview-astro/package.json
+++ b/packages/preview-astro/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "NODE_OPTIONS=--max-old-space-size=32768 astro build",
+    "check": "astro check",
     "preview": "astro preview",
     "astro": "astro"
   },
