--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -27,6 +27,7 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@primer/octicons": "^18.3.0",
+    "@types/node": "^20.9.0",
     "@types/react": "^18.0.21",
     "camelcase": "^7.0.0",
     "cheerio": "^1.0.0-rc.12",
