--- a/packages/preview-astro/package.json
+++ b/packages/preview-astro/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preview-astro",
   "type": "module",
-  "version": "0.0.1",
+  "version": "4.12.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -20,7 +20,7 @@
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.1-snapshot.0",
+    "react-icons": "^4.12.0",
     "sass": "^1.69.5",
     "tiny-skeleton-loader-react": "^1.2.1",
     "typescript": "^5.2.2"
