--- a/packages/preview-astro/package.json
+++ b/packages/preview-astro/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/react": "^3.0.4",
+    "@nanostores/react": "^0.7.1",
     "astro": "^3.4.3",
     "basscss": "^8.1.0",
     "cogo-toast": "^4.2.3",
     "copy-to-clipboard": "^3.3.3",
+    "nanostores": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
