--- a/packages/react-icons/babel.config.commonjs.json
+++ b/packages/react-icons/babel.config.commonjs.json
@@ -16,9 +16,7 @@
     [
       "./plugin/defaultImportConverter",
       {
-        "keys": [
-          "React"
-        ]
+        "keys": ["React"]
       }
     ]
   ]
