--- a/packages/_react-icons_all/package.json
+++ b/packages/_react-icons_all/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-icons",
+  "name": "@e1himself/react-icons",
   "version": "4.12.0",
   "description": "SVG React icons of popular icon packs using ES6 imports",
   "author": "Goran Gajic",
