Update the rest of test packages to use the new package name

--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -3,9 +3,9 @@
   "version": "4.12.0",
   "private": true,
   "dependencies": {
+    "@e1himself/react-icons": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
