--- a/packages/react-icons/scripts/tsconfig.json
+++ b/packages/react-icons/scripts/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ES2015",
     "noEmit": true,
+    "emitDeclarationOnly": false,
     "allowSyntheticDefaultImports": true
   },
   "include": ["**/*.ts"]
