--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-icons_builders",
   "private": true,
-  "version": "5.0.1",
+  "version": "5.0.2-snapshot.0",
   "description": "SVG React icons of popular icon packs using ES6 imports",
   "author": "Goran Gajic",
   "contributors": [
