--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "eslint-plugin-react": "latest",
+    "@eslint/js": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^9.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
     "lerna": "^8.1.2",
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.1"
+    "prettier-plugin-astro": "^0.12.1",
+    "typescript-eslint": "^7.8.0"
   },
   "scripts": {
-    "lint": "yarn eslint .",
+    "lint": "yarn eslint",
     "format": "prettier --write --ignore-unknown '**/*.{js,ts,mjs,cjs,json,astro}'",
     "format:ci": "prettier --check --ignore-unknown '**/*.{js,ts,mjs,cjs,json,astro}'",
     "version-up": "lerna version",
