--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,11 +1,11 @@
 {
   "name": "demo",
-  "version": "5.4.1-snapshot.0",
+  "version": "5.5.0",
   "private": true,
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.1-snapshot.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
