--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -3,8 +3,8 @@
   "version": "5.5.0",
   "private": true,
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1"
   },
@@ -15,17 +15,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.8",
-    "enzyme-to-json": "^3.6.2"
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0"
   },
   "resolutions": {
     "@types/cheerio": "npm:empty-npm-package"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
   },
   "browserslist": [
     ">0.2%",
