--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -24,29 +24,28 @@
     "react": "*"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.1",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@primer/octicons": "^18.3.0",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.3.1",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.14",
     "babel-plugin-add-import-extension": "^1.6.0",
     "camelcase": "^8.0.0",
-    "cheerio": "^1.0.0-rc.12",
-    "esbuild": "^0.25.0",
-    "esbuild-register": "^3.5.0",
+    "cheerio": "^1.1.2",
+    "esbuild": "^0.25.10",
+    "esbuild-register": "^3.6.0",
     "feather-icons": "^4.29.2",
     "find-package": "^1.0.0",
-    "glob": "^8.1.0",
-    "glob-promise": "^6.0.5",
+    "glob": "^11.0.3",
     "ionicons": "^4.6.3",
     "ionicons-5": "npm:ionicons@5",
     "lucide-static": "^0.462.0",
-    "p-queue": "^8.0.1",
+    "p-queue": "^8.1.1",
     "svgo": "^3.0.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "ts": "node -r esbuild-register",
